# radar_odo_local_optimization

./: CMakeLists.txt  CMakeLists.txt.bak2  README.md  debug.txt
data/: sim_data_D.txt  sim_data_D_gt.txt  sim_data_T.txt  sim_data_p.txt
include/: error.h  utils.h
scripts/: test.ipynb
src/: ceres_slover_local_optimization.cc  ceres_with_eigen.cc  curveFitting.cc  g2o_solver_local_optimization.cc  readData  readData.cc  utils.cc
